--- a/index.html
+++ b/index.html
@@ -6,8 +6,324 @@
     <meta name="description" content="보이지 않지만 뚜렷한 존재감으로 모든 사람들에게 그랑핸드의 마음과 온기를 전하고자 끊임없는 시도를 통해 향의 일상화를 꿈꾸고 있습니다.">
     <meta name="keywords" content="향수, 디퓨저, 그랑핸드, 바디워시, 캔들, 향초, 스프레이, 핸드워시, 핸드크림">
     <title>그랑핸드 | GRANHAND</title>
+    <!-- 폰트 -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <!-- CSS -->
+    <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/font.css">
+    <link rel="stylesheet" href="./styles/common.css">
+    <link rel="stylesheet" href="./styles/index.css">
+    <!-- JS -->
 </head>
 <body>
-    
+    <header>
+        <div class="head_wrap">
+            <ul class="gnb">
+                <li><a href="#">Granhand</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">Journal</a></li>
+                <li><a href="#">Wallpaper</a></li>
+                <li><a href="#">Stores</a></li>
+                <li><a href="#">Index</a></li>
+            </ul>
+            <div class="logo">
+                <h1><a href="#"><img src="./images/logo_w.png" alt="그랑핸드"></a></h1>
+            </div>
+            <div class="right_wrap">
+                <a href="#" class="search"><img src="./images/icon_search.png" alt="검색하기"></a>
+                <a href="#" class="mypage"><img src="./images/icon_my.png" alt="마이페이지"></a>
+                <a href="#" class="cart"><img src="./images/icon_cart.png" alt="장바구니"></a>
+                <div class="lang_wrap">
+                    <button type="button" id="lang_btn"><img src="./images/icon_lang.png" alt="언어 설정"><img src="./images/icon_lang_down.png" alt="언어 설정 열기"></button>
+                    <div class="lang_select">
+                        <a href="#" class="kr">한국어</a>
+                        <a href="#" class="en">English</a>
+                        <a href="#" class="ch">Chinese</a>
+                        <a href="#" class="jp">Japanese</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+        <div class="wrap">
+            <section class="main_title">
+                <!-- 유튜브 비디오 삽입 -->
+                <iframe 
+                    width="560" 
+                    height="315" 
+                    src="https://www.youtube.com/embed/HHw586ytRE4?controls=0&rel=0&modestbranding=1&autoplay=1&mute=1&loop=1&playlist=HHw586ytRE4" 
+                    frameborder="0" 
+                    allow="autoplay; encrypted-media" 
+                    allowfullscreen>
+                </iframe>
+            </section>
+            <section class="shop">
+                <div class="shop_container">
+                    <div class="slide_wrap">
+                        <ul class="filter">
+                            <li class="active_filter"><a href="#">Perfume<img src="" alt="향수 바로가기"></a></li>
+                            <li><a href="#">Home Fragrance<img src="" alt="홈제품 바로가기"></a></li>
+                            <li><a href="#">Body<img src="" alt="바디제품 바로가기"></a></li>
+                            <li><a href="#">Natural<img src="" alt="스프레이, 시그니처티 바로가기"></a></li>
+                            <li><a href="#">Tool<img src="" alt="굿즈 바로가기"></a></li>
+                            <li><a href="#">Komfortabel COFFEE<img src="" alt="카페 상품 바로가기"></a></li>
+                        </ul>
+                        <div class="product_wrap swiper">
+                            <ul class="swiper-wrapper">
+                                <li class="swiper-slide slide1"></li>
+                            </ul>
+                            <div class="swiper-scrollbar"></div>
+                        </div>
+                    </div>
+                    <div class="swiper-button-next"></div>
+                </div>
+            </section>
+            <section class="set">
+                <div class="set_bnr">
+                    <div class="left_wrap">
+                        <h2>New Arrival</h2>
+                        <h2>SUSIE SALMON.</h2>
+                    </div>
+                    <div class="right_wrap">
+                        <p>여름의 시작을 산뜻하게</p>
+                        <p>6월 14일, 새롭게 선보이는 바디워시로<br>
+                            매일의 배스타임을 하루 중 가장 즐거운<br>
+                            휴식의 시간으로 만들어보세요.</p>
+                    </div>
+                </div>
+                <div class="set_slide swiper">
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide slide1">
+                            <a href="#" class="gift_product">
+                                <p class="gift_img"><img src="" alt=""></p>
+                                <h2>Multi Perfume & Sachet Set.</h2>
+                                <h3>53,000 KRW</h3>
+                                <p>멀티퍼퓸 & 사쉐 세트<br>
+                                    100ml & 40g</p>
+                            </a>
+                            <a href="#">Gift Set<img src="" alt="기프트세트 바로가기"></a>
+                        </div>
+                        <div class="swiper-slide slide2">
+                            <a href="#" class="gift_product">
+                                <p class="gift_img"><img src="" alt=""></p>
+                                <h2>Hand Wash & Sachet Set.</h2>
+                                <h3>43,000 KRW</h3>
+                                <p>핸드워시 & 사쉐 세트<br>
+                                    450ml & 40g</p>
+                            </a>
+                            <a href="#">Gift Set<img src="" alt="기프트세트 바로가기"></a>
+                        </div>
+                        <div class="swiper-slide slide3">
+                            <a href="#" class="gift_product">
+                                <p class="gift_img"><img src="" alt=""></p>
+                                <h2>Hand Cream & Sachet Set.</h2>
+                                <h3>43,000 KRW</h3>
+                                <p>핸드크림 & 사쉐 세트<br>
+                                    60g & 40g</p>
+                            </a>
+                            <a href="#">Gift Set<img src="" alt="기프트세트 바로가기"></a>
+                        </div>
+                        <div class="swiper-slide slide4">
+                            <a href="#" class="gift_product">
+                                <p class="gift_img"><img src="" alt=""></p>
+                                <h2>Hand Cream 2P Set.</h2>
+                                <h3>50,000 KRW</h3>
+                                <p>핸드크림 2P 파우치 세트<br>
+                                    60g * 2</p>
+                            </a>
+                            <a href="#">Gift Set<img src="" alt="기프트세트 바로가기"></a>
+                        </div>
+                    </div>
+                    <div class="swiper-button-next"></div>
+                </div>
+            </section>
+            <section class="journal">
+                <div class="journal_wrap">
+                    <ul class="journal_filter">
+                        <li><a href="#">All</a></li>
+                        <li class="journal_act"><a href="#">News</a></li>
+                        <li><a href="#">Culture</a></li>
+                        <li><a href="#">Body</a></li>
+                        <li><a href="#">Life</a></li>
+                        <li><a href="#">Team</a></li>
+                        <li><a href="#">Essay</a></li>
+                        <li><a href="#">Film</a></li>
+                    </ul>
+                    <div class="journal_contents"> 
+                        <div class="journal_img swiper">
+                            <div class="swiper-button-prev"></div>
+                            <div class="swiper-wrapper">
+                                <a href="#" class="swiper-slide slide1"><img src="" alt=""></a>
+                                <a href="#" class="swiper-slide slide1"><img src="" alt=""></a>
+                                <a href="#" class="swiper-slide slide1"><img src="" alt=""></a>
+                                <a href="#" class="swiper-slide slide1"><img src="" alt=""></a>
+                                <a href="#" class="swiper-slide slide1"><img src="" alt=""></a>
+                            </div>
+                            <div class="swiper-button-next"></div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="wall_paper">
+                <div class="paper_wrap">
+                    <div class="paper1">
+                        <div class="front">
+                            <img src="" alt="">
+                        </div>
+                        <div class="back">
+                            <h1><img src="" alt=""></h1>
+                            <div class="down_wrap">
+                                <h2>Instant Moment, 2022</h2>
+                                <a href="#">배경화면 다운로드<img src="" alt=""></a>
+                                <p>&copy; 2023 GRANHAND. All rights reserved.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="paper2">
+                        <div class="front">
+                            <img src="" alt="">
+                        </div>
+                        <div class="back">
+                            <h1><img src="" alt=""></h1>
+                            <div class="down_wrap">
+                                <h2>Instant Moment, 2022</h2>
+                                <a href="#">배경화면 다운로드<img src="" alt=""></a>
+                                <p>&copy; 2023 GRANHAND. All rights reserved.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="paper3">
+                        <div class="front">
+                            <img src="" alt="">
+                        </div>
+                        <div class="back">
+                            <h1><img src="" alt=""></h1>
+                            <div class="down_wrap">
+                                <h2>Instant Moment, 2022</h2>
+                                <a href="#">배경화면 다운로드<img src="" alt=""></a>
+                                <p>&copy; 2023 GRANHAND. All rights reserved.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <p>SOMETIMES<br>YOU WIN,</p><!-- 배경 글씨 -->
+            </section>
+            <section class="store">
+                <p>SOMETIMES<br>YOU LEARN.</p> <!-- 배경 글씨 -->
+                <div class="store_container">
+                    <div class="list">
+                        <div class="store_list">
+                            <h3>GRANHAND. STORES</h3>
+                            <p>
+                                <a href="#">Seogyo</a>
+                                <a href="#">Gwanghwamun</a>
+                            </p>
+                            <p>
+                                <a href="#">Dosan</a>
+                                <a href="#">Namsan</a>
+                                <a href="#">Mapo</a>
+                            </p>
+                            <p>
+                                <a href="#">Seochon</a>
+                                <a href="#">Sogyeok</a>
+                            </p>
+                        </div>
+                        <div class="coffee_list">
+                            <p>
+                                <a href="#">Seogyo</a>
+                                <a href="#">Gwanghwamun</a>
+                            </p>
+                            <p>
+                                <a href="#">City Hall</a>
+                                <a href="#">Namsan</a>
+                                <a href="#">Anguk</a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="store_pic_wrap">
+                        <div class="store_gnb">
+                            <a href="#">Granhand</a>
+                            <a href="#">Shop</a>
+                            <a href="#">Journal</a>
+                            <a href="#">Wallpaper</a>
+                            <a href="#" class="current">Stores.</a>
+                            <a href="#">Index.</a>
+                        </div>
+                        <div class="store_pic ">
+                            <!-- JS로 이미지가 계속 쌓이는 구조 만들기 -->
+                        </div>
+                    </div>
+                </div>
+                <button type="button" class="more_store"><img src="" alt=""></button>
+            </section>
+            <section class="index">
+                <div class="index_wrap">
+                    <ul class="index_filter">
+                        <li><a href="#">All</a></li>
+                        <li class="journal_act"><a href="#">Signature</a></li>
+                        <li><a href="#">Perfume</a></li>
+                        <li><a href="#">Fragrances</a></li>
+                        <li><a href="#">Natural</a></li>
+                    </ul>
+                    <div class="index_contents swiper">
+                        <div class="swiper-wrapper">
+                            <a href="#" class="swiper-slide slide1">
+                                <h2>Marne.</h2>
+                                <h3>마르네</h3>
+                                <p class="perfume_note">Orange, Sage, Pine, Woody,
+                                    Patchouli, Musk, MosS</p>
+                                <p>도시와는 달리 낮은 건물들과 그 뒤로 완만하게 펼쳐진 능선, 빠르게 지나쳐 더 아쉬운 좁은 골목들, 차창 틈으로 들어오는 기분 좋은 낮선 공기. 해가 지기 전 이 풍경 속으로 녹아들고 싶은 마음에 속도로 향하던 차를 갓길에 세우고 느리게 걸어본다. 발길 닿는 곳으로 걷다 도착한 능원에는 사람들이 저마다의 방식으로 이 순간을 예찬하고 있다. 적당한 크기의 아름드리 소나무를 찾아 그 아래 자리를 잡는다. 바빴던 일상의 기억은 금세 흐려지고 바람이 닿는 살갗이 기분 좋게 저려온다.</p>
+                            </a>
+                            <a href="#" class="swiper-slide slide2">
+                                <h2>Marne.</h2>
+                                <h3>마르네</h3>
+                                <p class="perfume_note">Orange, Sage, Pine, Woody,
+                                    Patchouli, Musk, MosS</p>
+                                <p>도시와는 달리 낮은 건물들과 그 뒤로 완만하게 펼쳐진 능선, 빠르게 지나쳐 더 아쉬운 좁은 골목들, 차창 틈으로 들어오는 기분 좋은 낮선 공기. 해가 지기 전 이 풍경 속으로 녹아들고 싶은 마음에 속도로 향하던 차를 갓길에 세우고 느리게 걸어본다. 발길 닿는 곳으로 걷다 도착한 능원에는 사람들이 저마다의 방식으로 이 순간을 예찬하고 있다. 적당한 크기의 아름드리 소나무를 찾아 그 아래 자리를 잡는다. 바빴던 일상의 기억은 금세 흐려지고 바람이 닿는 살갗이 기분 좋게 저려온다.</p>
+                            </a>
+                            <a href="#" class="swiper-slide slide3">
+                                <h2>Marne.</h2>
+                                <h3>마르네</h3>
+                                <p class="perfume_note">Orange, Sage, Pine, Woody,
+                                    Patchouli, Musk, MosS</p>
+                                <p>도시와는 달리 낮은 건물들과 그 뒤로 완만하게 펼쳐진 능선, 빠르게 지나쳐 더 아쉬운 좁은 골목들, 차창 틈으로 들어오는 기분 좋은 낮선 공기. 해가 지기 전 이 풍경 속으로 녹아들고 싶은 마음에 속도로 향하던 차를 갓길에 세우고 느리게 걸어본다. 발길 닿는 곳으로 걷다 도착한 능원에는 사람들이 저마다의 방식으로 이 순간을 예찬하고 있다. 적당한 크기의 아름드리 소나무를 찾아 그 아래 자리를 잡는다. 바빴던 일상의 기억은 금세 흐려지고 바람이 닿는 살갗이 기분 좋게 저려온다.</p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </main>
+    <footer>
+        <div class="foot_wrap">
+            <p>향은 보이지도, 잡히지도 않지만, 우리에게 수많은 기억과 감정을 각인시키고, 나아가 우리 삶 속에서 많은 부분을 결정합니다. 그랑핸드는 이러한 향의 가치를 믿으며, 이를 매개로 한 끊임없는 시도를 통해 향의 일상화를 꿈꿉니다. 그랑핸드는 쉽게 소비되고 잊혀질 무언가가 아닌, 보이지 않는 곳에서 뚜렷한 존재감으로 모든 사람들에게 우리의 마음과 온기를 전하고 싶습니다.</p>
+            <div class="com_info">
+                <div class="top">
+                    <a href="#">이용약관</a>
+                    <p>개인정보관리 책임자 정지호</p>
+                    <p>개인정보처리방침 호스팅 (주)아임웹</p>
+                </div>
+                <div class="bottom">
+                    <div class="bottom_left">
+                        <p>대표 정준혁</p>
+                        <p>상호 (유)그랑핸드</p>
+                        <p>사업자번호 127-88-01898</p>
+                        <p>통신판매업 2020-통신판매업 2020-서울종로-0623</p>
+                        <p>주소 서울시 종로구 자하문로 4길 14-2</p>
+                        <p>메일 hello@granhand.com</p>
+                        <p>전화 02-333-6525</p>
+                    </div>
+                    <div class="bottom_right">
+                        <p>Sometimes you win,<br>Sometimes you learn.</p>
+                        <p><img src="" alt="인스타그램 바로가기"></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
