--- a/index.html
+++ b/index.html
@@ -16,18 +16,21 @@
     <link rel="stylesheet" href="./styles/common.css">
     <link rel="stylesheet" href="./styles/index.css">
     <!-- JS -->
+    <script src="./scripts/active.js" defer></script>
 </head>
 <body>
     <header>
         <div class="head_wrap">
-            <ul class="gnb">
-                <li><a href="#">Granhand</a></li>
-                <li><a href="#">Shop</a></li>
-                <li><a href="#">Journal</a></li>
-                <li><a href="#">Wallpaper</a></li>
-                <li><a href="#">Stores</a></li>
-                <li><a href="#">Index</a></li>
-            </ul>
+            <nav>
+                <ul class="gnb">
+                    <li><a href="#">Granhand</a></li>
+                    <li><a href="#">Shop</a></li>
+                    <li><a href="#">Journal</a></li>
+                    <li><a href="#">Wallpaper</a></li>
+                    <li><a href="#">Stores</a></li>
+                    <li><a href="#">Index</a></li>
+                </ul>
+            </nav>
             <div class="logo">
                 <h1><a href="#"><img src="./images/logo_w.png" alt="그랑핸드"></a></h1>
             </div>
@@ -36,7 +39,7 @@
                 <a href="#" class="mypage"><img src="./images/icon_my.png" alt="마이페이지"></a>
                 <a href="#" class="cart"><img src="./images/icon_cart.png" alt="장바구니"></a>
                 <div class="lang_wrap">
-                    <button type="button" id="lang_btn"><img src="./images/icon_lang.png" alt="언어 설정"><img src="./images/icon_lang_down.png" alt="언어 설정 열기"></button>
+                    <button type="button" id="lang_btn"><img src="./images/icon_lang.png" alt="언어 설정"><img src="./images/icon_lang_down.png" alt="언어 설정 열기" class="lang_arrow"></button>
                     <div class="lang_select">
                         <a href="#" class="kr">한국어</a>
                         <a href="#" class="en">English</a>
@@ -64,21 +67,48 @@
                 <div class="shop_container">
                     <div class="slide_wrap">
                         <ul class="filter">
-                            <li class="active_filter"><a href="#">Perfume<img src="" alt="향수 바로가기"></a></li>
-                            <li><a href="#">Home Fragrance<img src="" alt="홈제품 바로가기"></a></li>
-                            <li><a href="#">Body<img src="" alt="바디제품 바로가기"></a></li>
-                            <li><a href="#">Natural<img src="" alt="스프레이, 시그니처티 바로가기"></a></li>
-                            <li><a href="#">Tool<img src="" alt="굿즈 바로가기"></a></li>
-                            <li><a href="#">Komfortabel COFFEE<img src="" alt="카페 상품 바로가기"></a></li>
+                            <li class="active_filter"><a href="#">Perfume<img src="./images/icon_shop_filter.png" alt="향수 바로가기"></a></li>
+                            <li><a href="#">Home Fragrance<img src="./images/icon_shop_filter.png" alt="홈제품 바로가기"></a></li>
+                            <li><a href="#">Body<img src="./images/icon_shop_filter.png" alt="바디제품 바로가기"></a></li>
+                            <li><a href="#">Natural<img src="./images/icon_shop_filter.png" alt="스프레이, 시그니처티 바로가기"></a></li>
+                            <li><a href="#">Tool<img src="./images/icon_shop_filter.png" alt="굿즈 바로가기"></a></li>
+                            <li><a href="#">Komfortabel COFFEE<img src="./images/icon_shop_filter.png" alt="카페 상품 바로가기"></a></li>
                         </ul>
-                        <div class="product_wrap swiper">
-                            <ul class="swiper-wrapper">
-                                <li class="swiper-slide slide1"></li>
-                            </ul>
-                            <div class="swiper-scrollbar"></div>
+                        <div class="product_wrap">
+                            <div class="product_swiper swiper">
+                                <div class="swiper-wrapper">
+                                    <a href="#" class="swiper-slide slide1">
+                                        <div class="thumnail"><img src="./images/shop/img_shop001.jpg" alt=""></div>
+                                        <div class="product_name">
+                                            <h2>AINOA.</h2>
+                                            <p>55,000 KRW</p>
+                                        </div>
+                                        <p>아이노아 퍼퓸<br>130ml</p>
+                                    </a>
+                                    <a href="#" class="swiper-slide slide2">
+                                        <div class="thumnail"><img src="./images/shop/img_shop002.jpg" alt=""></div>
+                                        <div class="product_name">
+                                            <h2>SOIE. Signature</h2>
+                                            <p>110,000 KRW</p>
+                                        </div>
+                                        <p>수아 시그니처 퍼퓸<br>50ml</p>
+                                    </a>
+                                    <a href="#" class="swiper-slide slide3">
+                                        <div class="thumnail"><img src="./images/shop/img_shop003.jpg" alt=""></div>
+                                        <div class="product_name">
+                                            <h2>NOLL.</h2>
+                                            <p>55,000 KRW</p>
+                                        </div>
+                                        <p>놀 퍼퓸<br>130ml</p>
+                                    </a>
+                                </div>
+                                <div class="swiper-scrollbar"></div>
+                            </div>
+                            <button type="button" class="swiper-button-next">
+                                <img src="./images/icon_page_down.png" alt="상품 더보기">
+                            </button>
                         </div>
                     </div>
-                    <div class="swiper-button-next"></div>
                 </div>
             </section>
             <section class="set">
@@ -93,6 +123,7 @@
                             매일의 배스타임을 하루 중 가장 즐거운<br>
                             휴식의 시간으로 만들어보세요.</p>
                     </div>
+                    <a href="#"><img src="./images/icon_bnr_down.png" alt=""></a>
                 </div>
                 <div class="set_slide swiper">
                     <div class="swiper-button-prev"></div>
