데스크탑 진행중

--- a/index.html
+++ b/index.html
@@ -15,8 +15,16 @@
     <link rel="stylesheet" href="./styles/font.css">
     <link rel="stylesheet" href="./styles/common.css">
     <link rel="stylesheet" href="./styles/index.css">
+    <!-- Swiper -->
+    <!--플러그인 필수 css cdn 연결-->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <!--플러그인 필수 JS cdn 연결-->
+    <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <!-- JS -->
     <script src="./scripts/active.js" defer></script>
+    <script src="./scripts/swiper.js" defer></script>
 </head>
 <body>
     <header>
@@ -101,12 +109,34 @@
                                         </div>
                                         <p>놀 퍼퓸<br>130ml</p>
                                     </a>
+                                    <a href="#" class="swiper-slide slide4">
+                                        <div class="thumnail"><img src="./images/shop/img_shop003.jpg" alt=""></div>
+                                        <div class="product_name">
+                                            <h2>NOLL.</h2>
+                                            <p>55,000 KRW</p>
+                                        </div>
+                                        <p>놀 퍼퓸<br>130ml</p>
+                                    </a>
+                                    <a href="#" class="swiper-slide slide5">
+                                        <div class="thumnail"><img src="./images/shop/img_shop002.jpg" alt=""></div>
+                                        <div class="product_name">
+                                            <h2>SOIE. Signature</h2>
+                                            <p>110,000 KRW</p>
+                                        </div>
+                                        <p>수아 시그니처 퍼퓸<br>50ml</p>
+                                    </a>
+                                    <a href="#" class="swiper-slide slide6">
+                                        <div class="thumnail"><img src="./images/shop/img_shop001.jpg" alt=""></div>
+                                        <div class="product_name">
+                                            <h2>AINOA.</h2>
+                                            <p>55,000 KRW</p>
+                                        </div>
+                                        <p>아이노아 퍼퓸<br>130ml</p>
+                                    </a>
                                 </div>
                                 <div class="swiper-scrollbar"></div>
                             </div>
-                            <button type="button" class="swiper-button-next">
-                                <img src="./images/icon_page_down.png" alt="상품 더보기">
-                            </button>
+                            <div class="swiper-button-next"></div>
                         </div>
                     </div>
                 </div>
@@ -116,6 +146,7 @@
                     <div class="left_wrap">
                         <h2>New Arrival</h2>
                         <h2>SUSIE SALMON.</h2>
+                        <a href="#"><img src="./images/icon_bnr_down.png" alt=""></a>
                     </div>
                     <div class="right_wrap">
                         <p>여름의 시작을 산뜻하게</p>
@@ -123,50 +154,50 @@
                             매일의 배스타임을 하루 중 가장 즐거운<br>
                             휴식의 시간으로 만들어보세요.</p>
                     </div>
-                    <a href="#"><img src="./images/icon_bnr_down.png" alt=""></a>
+                    
                 </div>
                 <div class="set_slide swiper">
                     <div class="swiper-button-prev"></div>
                     <div class="swiper-wrapper">
                         <div class="swiper-slide slide1">
                             <a href="#" class="gift_product">
-                                <p class="gift_img"><img src="" alt=""></p>
+                                <p class="gift_img"><img src="./images/set/img_set001.jpg" alt=""></p>
                                 <h2>Multi Perfume & Sachet Set.</h2>
                                 <h3>53,000 KRW</h3>
                                 <p>멀티퍼퓸 & 사쉐 세트<br>
                                     100ml & 40g</p>
                             </a>
-                            <a href="#">Gift Set<img src="" alt="기프트세트 바로가기"></a>
+                            <a href="#">Gift Set<img src="./images/icon_set_down.png" alt="기프트세트 바로가기"></a>
                         </div>
                         <div class="swiper-slide slide2">
                             <a href="#" class="gift_product">
-                                <p class="gift_img"><img src="" alt=""></p>
+                                <p class="gift_img"><img src="./images/set/img_set002.jpg" alt=""></p>
                                 <h2>Hand Wash & Sachet Set.</h2>
                                 <h3>43,000 KRW</h3>
                                 <p>핸드워시 & 사쉐 세트<br>
                                     450ml & 40g</p>
                             </a>
-                            <a href="#">Gift Set<img src="" alt="기프트세트 바로가기"></a>
+                            <a href="#">Gift Set<img src="./images/icon_set_down.png" alt="기프트세트 바로가기"></a>
                         </div>
                         <div class="swiper-slide slide3">
                             <a href="#" class="gift_product">
-                                <p class="gift_img"><img src="" alt=""></p>
+                                <p class="gift_img"><img src="./images/set/img_set003.jpg" alt=""></p>
                                 <h2>Hand Cream & Sachet Set.</h2>
                                 <h3>43,000 KRW</h3>
                                 <p>핸드크림 & 사쉐 세트<br>
                                     60g & 40g</p>
                             </a>
-                            <a href="#">Gift Set<img src="" alt="기프트세트 바로가기"></a>
+                            <a href="#">Gift Set<img src="./images/icon_set_down.png" alt="기프트세트 바로가기"></a>
                         </div>
                         <div class="swiper-slide slide4">
                             <a href="#" class="gift_product">
-                                <p class="gift_img"><img src="" alt=""></p>
+                                <p class="gift_img"><img src="./images/set/img_set004.jpg" alt=""></p>
                                 <h2>Hand Cream 2P Set.</h2>
                                 <h3>50,000 KRW</h3>
                                 <p>핸드크림 2P 파우치 세트<br>
                                     60g * 2</p>
                             </a>
-                            <a href="#">Gift Set<img src="" alt="기프트세트 바로가기"></a>
+                            <a href="#">Gift Set<img src="./images/icon_set_down.png" alt="기프트세트 바로가기"></a>
                         </div>
                     </div>
                     <div class="swiper-button-next"></div>
@@ -187,13 +218,13 @@
                     <div class="journal_contents"> 
                         <div class="journal_img swiper">
                             <div class="swiper-button-prev"></div>
-                            <div class="swiper-wrapper">
-                                <a href="#" class="swiper-slide slide1"><img src="" alt=""></a>
-                                <a href="#" class="swiper-slide slide1"><img src="" alt=""></a>
-                                <a href="#" class="swiper-slide slide1"><img src="" alt=""></a>
-                                <a href="#" class="swiper-slide slide1"><img src="" alt=""></a>
-                                <a href="#" class="swiper-slide slide1"><img src="" alt=""></a>
-                            </div>
+                            <ul class="swiper-wrapper">
+                                <li class="swiper-slide slide1"><a href="#"><img src="" alt=""></a></li>
+                                <li class="swiper-slide slide2"><a href="#"><img src="" alt=""></a></li>
+                                <li class="swiper-slide slide3"><a href="#"><img src="" alt=""></a></li>
+                                <li class="swiper-slide slide4"><a href="#"><img src="" alt=""></a></li>
+                                <li class="swiper-slide slide5"><a href="#"><img src="" alt=""></a></li>
+                            </ul>
                             <div class="swiper-button-next"></div>
                         </div>
                     </div>
