그랑핸드 데스크탑

--- a/index.html
+++ b/index.html
@@ -85,54 +85,66 @@
                         <div class="product_wrap">
                             <div class="product_swiper swiper">
                                 <div class="swiper-wrapper">
-                                    <a href="#" class="swiper-slide slide1">
-                                        <div class="thumnail"><img src="./images/shop/img_shop001.jpg" alt=""></div>
-                                        <div class="product_name">
-                                            <h2>AINOA.</h2>
-                                            <p>55,000 KRW</p>
-                                        </div>
-                                        <p>아이노아 퍼퓸<br>130ml</p>
-                                    </a>
-                                    <a href="#" class="swiper-slide slide2">
+                                    <div class="swiper-slide slide1">
+                                        <a href="#">
+                                            <div class="thumnail"><img src="./images/shop/img_shop001.jpg" alt=""></div>
+                                            <div class="product_name">
+                                                <h2>AINOA.</h2>
+                                                <p>55,000 KRW</p>
+                                            </div>
+                                            <p>아이노아 퍼퓸<br>130ml</p>
+                                        </a>
+                                    </div>
+                                    <div class="swiper-slide slide2">
+                                        <a href="#" >
                                         <div class="thumnail"><img src="./images/shop/img_shop002.jpg" alt=""></div>
                                         <div class="product_name">
                                             <h2>SOIE. Signature</h2>
                                             <p>110,000 KRW</p>
                                         </div>
                                         <p>수아 시그니처 퍼퓸<br>50ml</p>
-                                    </a>
-                                    <a href="#" class="swiper-slide slide3">
-                                        <div class="thumnail"><img src="./images/shop/img_shop003.jpg" alt=""></div>
-                                        <div class="product_name">
-                                            <h2>NOLL.</h2>
-                                            <p>55,000 KRW</p>
-                                        </div>
-                                        <p>놀 퍼퓸<br>130ml</p>
-                                    </a>
-                                    <a href="#" class="swiper-slide slide4">
-                                        <div class="thumnail"><img src="./images/shop/img_shop003.jpg" alt=""></div>
-                                        <div class="product_name">
-                                            <h2>NOLL.</h2>
-                                            <p>55,000 KRW</p>
-                                        </div>
-                                        <p>놀 퍼퓸<br>130ml</p>
-                                    </a>
-                                    <a href="#" class="swiper-slide slide5">
+                                        </a>
+                                    </div>
+                                    <div class="swiper-slide slide3">
+                                        <a href="#">
+                                            <div class="thumnail"><img src="./images/shop/img_shop003.jpg" alt=""></div>
+                                            <div class="product_name">
+                                                <h2>NOLL.</h2>
+                                                <p>55,000 KRW</p>
+                                            </div>
+                                            <p>놀 퍼퓸<br>130ml</p>
+                                        </a>
+                                    </div>
+                                    <div class="swiper-slide slide4">
+                                        <a href="#">
+                                            <div class="thumnail"><img src="./images/shop/img_shop003.jpg" alt=""></div>
+                                            <div class="product_name">
+                                                <h2>NOLL.</h2>
+                                                <p>55,000 KRW</p>
+                                            </div>
+                                            <p>놀 퍼퓸<br>130ml</p>
+                                        </a>
+                                    </div>
+                                    <div class="swiper-slide slide5">
+                                        <a href="#">
                                         <div class="thumnail"><img src="./images/shop/img_shop002.jpg" alt=""></div>
                                         <div class="product_name">
                                             <h2>SOIE. Signature</h2>
                                             <p>110,000 KRW</p>
                                         </div>
                                         <p>수아 시그니처 퍼퓸<br>50ml</p>
-                                    </a>
-                                    <a href="#" class="swiper-slide slide6">
-                                        <div class="thumnail"><img src="./images/shop/img_shop001.jpg" alt=""></div>
-                                        <div class="product_name">
-                                            <h2>AINOA.</h2>
-                                            <p>55,000 KRW</p>
-                                        </div>
-                                        <p>아이노아 퍼퓸<br>130ml</p>
-                                    </a>
+                                        </a>
+                                    </div>
+                                    <div class="swiper-slide slide6">
+                                        <a href="#">
+                                            <div class="thumnail"><img src="./images/shop/img_shop001.jpg" alt=""></div>
+                                            <div class="product_name">
+                                                <h2>AINOA.</h2>
+                                                <p>55,000 KRW</p>
+                                            </div>
+                                            <p>아이노아 퍼퓸<br>130ml</p>
+                                        </a>
+                                    </div>
                                 </div>
                                 <div class="swiper-scrollbar"></div>
                             </div>
