--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             <section class="shop">
                 <div class="shop_container">
                     <div class="slide_wrap">
-                        <ul class="filter">
-                            <li class="active_filter"><a href="#">Perfume<img src="./images/icon_shop_filter.png" alt="향수 바로가기"></a></li>
+                        <ul class="filter filter_gradient1">
+                            <li><a href="#" class="active_filter">Perfume<img src="./images/icon_shop_filter.png" alt="향수 바로가기"></a></li>
                             <li><a href="#">Home Fragrance<img src="./images/icon_shop_filter.png" alt="홈제품 바로가기"></a></li>
                             <li><a href="#">Body<img src="./images/icon_shop_filter.png" alt="바디제품 바로가기"></a></li>
                             <li><a href="#">Natural<img src="./images/icon_shop_filter.png" alt="스프레이, 시그니처티 바로가기"></a></li>
@@ -86,64 +86,68 @@
                             <div class="product_swiper swiper">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide slide1">
-                                        <a href="#">
-                                            <div class="thumnail"><img src="./images/shop/img_shop001.jpg" alt=""></div>
+                                        <div class="product">
+                                            <a href="#">
+                                                <div class="thumnail"><img src="./images/shop/img_shop001.jpg" alt=""></div>
+                                                <div class="product_name">
+                                                    <h2>AINOA.</h2>
+                                                    <p>55,000 KRW</p>
+                                                </div>
+                                                <p>아이노아 퍼퓸<br>130ml</p>
+                                            </a>
+                                        </div>
+                                        <div class="product">
+                                            <a href="#" >
+                                            <div class="thumnail"><img src="./images/shop/img_shop002.jpg" alt=""></div>
                                             <div class="product_name">
-                                                <h2>AINOA.</h2>
-                                                <p>55,000 KRW</p>
+                                                <h2>SOIE. Signature</h2>
+                                                <p>110,000 KRW</p>
                                             </div>
-                                            <p>아이노아 퍼퓸<br>130ml</p>
-                                        </a>
+                                            <p>수아 시그니처 퍼퓸<br>50ml</p>
+                                            </a>
+                                        </div>
+                                        <div class="product">
+                                            <a href="#">
+                                                <div class="thumnail"><img src="./images/shop/img_shop003.jpg" alt=""></div>
+                                                <div class="product_name">
+                                                    <h2>NOLL.</h2>
+                                                    <p>55,000 KRW</p>
+                                                </div>
+                                                <p>놀 퍼퓸<br>130ml</p>
+                                            </a>
+                                        </div>
                                     </div>
                                     <div class="swiper-slide slide2">
-                                        <a href="#" >
-                                        <div class="thumnail"><img src="./images/shop/img_shop002.jpg" alt=""></div>
-                                        <div class="product_name">
-                                            <h2>SOIE. Signature</h2>
-                                            <p>110,000 KRW</p>
+                                        <div class="product">
+                                            <a href="#">
+                                                <div class="thumnail"><img src="./images/shop/img_shop003.jpg" alt=""></div>
+                                                <div class="product_name">
+                                                    <h2>NOLL.</h2>
+                                                    <p>55,000 KRW</p>
+                                                </div>
+                                                <p>놀 퍼퓸<br>130ml</p>
+                                            </a>
                                         </div>
-                                        <p>수아 시그니처 퍼퓸<br>50ml</p>
-                                        </a>
-                                    </div>
-                                    <div class="swiper-slide slide3">
-                                        <a href="#">
-                                            <div class="thumnail"><img src="./images/shop/img_shop003.jpg" alt=""></div>
+                                        <div class="product">
+                                            <a href="#">
+                                            <div class="thumnail"><img src="./images/shop/img_shop002.jpg" alt=""></div>
                                             <div class="product_name">
-                                                <h2>NOLL.</h2>
-                                                <p>55,000 KRW</p>
+                                                <h2>SOIE. Signature</h2>
+                                                <p>110,000 KRW</p>
                                             </div>
-                                            <p>놀 퍼퓸<br>130ml</p>
-                                        </a>
-                                    </div>
-                                    <div class="swiper-slide slide4">
-                                        <a href="#">
-                                            <div class="thumnail"><img src="./images/shop/img_shop003.jpg" alt=""></div>
-                                            <div class="product_name">
-                                                <h2>NOLL.</h2>
-                                                <p>55,000 KRW</p>
-                                            </div>
-                                            <p>놀 퍼퓸<br>130ml</p>
-                                        </a>
-                                    </div>
-                                    <div class="swiper-slide slide5">
-                                        <a href="#">
-                                        <div class="thumnail"><img src="./images/shop/img_shop002.jpg" alt=""></div>
-                                        <div class="product_name">
-                                            <h2>SOIE. Signature</h2>
-                                            <p>110,000 KRW</p>
+                                            <p>수아 시그니처 퍼퓸<br>50ml</p>
+                                            </a>
                                         </div>
-                                        <p>수아 시그니처 퍼퓸<br>50ml</p>
-                                        </a>
-                                    </div>
-                                    <div class="swiper-slide slide6">
-                                        <a href="#">
-                                            <div class="thumnail"><img src="./images/shop/img_shop001.jpg" alt=""></div>
-                                            <div class="product_name">
-                                                <h2>AINOA.</h2>
-                                                <p>55,000 KRW</p>
-                                            </div>
-                                            <p>아이노아 퍼퓸<br>130ml</p>
-                                        </a>
+                                        <div class="product">
+                                            <a href="#">
+                                                <div class="thumnail"><img src="./images/shop/img_shop001.jpg" alt=""></div>
+                                                <div class="product_name">
+                                                    <h2>AINOA.</h2>
+                                                    <p>55,000 KRW</p>
+                                                </div>
+                                                <p>아이노아 퍼퓸<br>130ml</p>
+                                            </a>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="swiper-scrollbar"></div>
