--- a/index.html
+++ b/index.html
@@ -61,15 +61,7 @@
         </header>
         <main>
             <section class="main_title">
-                <!-- 유튜브 비디오 삽입 -->
-                <iframe 
-                    width="560" 
-                    height="315" 
-                    src="https://www.youtube.com/embed/HHw586ytRE4?controls=0&rel=0&modestbranding=1&autoplay=1&mute=1&loop=1&playlist=HHw586ytRE4" 
-                    frameborder="0" 
-                    allow="autoplay; encrypted-media" 
-                    allowfullscreen>
-                </iframe>
+                <video src="./video/granhand_video.mp4" autoplay muted loop></video>
             </section>
             <section class="shop">
                 <div class="shop_container">
