--- a/index.html
+++ b/index.html
@@ -372,26 +372,34 @@
                                     <a href="#">
                                         <img src="./images/journal/img_journal001.jpg" alt="">
                                     </a>
+                                    <div class="journal_title">
+                                        <h2>The Language of Scents</h2>
+                                        <h3>그랑핸드 문예공모전 작품집</h3>
+                                        <p>그랑핸드 제1회 문예공모전 수상작들을 책으로 엮었습니다. 이번 문예 공모전은 ‘The Language of Scents’, ‘향의 언어’라는 테마 아래, 향과 글이 어떻게 교차하며 상호작용하는지에 대한 그랑핸드만의 첫번째 시도였습니다.</p>
+                                        <a href="#">문예공모전 작품집 신청하기</a>
+                                    </div>
                                 </div>
                                 <div class="swiper-slide slide2">
                                     <a href="#">
                                         <img src="./images/journal/img_journal002.jpg" alt="">
                                     </a>
+                                    <div class="journal_title">
+                                        <h2>The Languag</h2>
+                                        <h3>그랑핸드 문예공모전 작품집</h3>
+                                        <p>그랑핸드 제1회 문예공모전 수상작들을 책으로 엮었습니다. 이번 문예 공모전은 ‘The Language of Scents’, ‘향의 언어’라는 테마 아래, 향과 글이 어떻게 교차하며 상호작용하는지에 대한 그랑핸드만의 첫번째 시도였습니다.</p>
+                                        <a href="#">문예공모전 작품집 신청하기</a>
+                                    </div>
                                 </div>
                                 <div class="swiper-slide slide3">
                                     <a href="#">
                                         <img src="./images/journal/img_journal003.jpg" alt="">
                                     </a>
-                                </div>
-                                <div class="swiper-slide slide4">
-                                    <a href="#">
-                                        <img src="./images/journal/img_journal004.jpg" alt="">
-                                    </a>
-                                </div>
-                                <div class="swiper-slide slide5">
-                                    <a href="#">
-                                        <img src="./images/journal/img_journal005.jpg" alt="">
-                                    </a>
+                                    <div class="journal_title">
+                                        <h2>The of Scents</h2>
+                                        <h3>그랑핸드 문예공모전 작품집</h3>
+                                        <p>그랑핸드 제1회 문예공모전 수상작들을 책으로 엮었습니다. 이번 문예 공모전은 ‘The Language of Scents’, ‘향의 언어’라는 테마 아래, 향과 글이 어떻게 교차하며 상호작용하는지에 대한 그랑핸드만의 첫번째 시도였습니다.</p>
+                                        <a href="#">문예공모전 작품집 신청하기</a>
+                                    </div>
                                 </div>
                             </div>
                             <div class="swiper-button-next"></div>
@@ -486,8 +494,7 @@
                                 <a href="#" class="current">Stores.</a>
                                 <a href="#">Index.</a>
                             </div>
-                            <div class="store_pic ">
-                                <!-- JS로 이미지가 계속 쌓이는 구조 만들기 -->
+                            <div class="store_pic">
                             </div>
                         </div>
                     </div>
@@ -540,12 +547,12 @@
             <div class="foot_wrap">
                 <p>향은 보이지도, 잡히지도 않지만, 우리에게 수많은 기억과 감정을 각인시키고, 나아가 우리 삶 속에서 많은 부분을 결정합니다. 그랑핸드는 이러한 향의 가치를 믿으며, 이를 매개로 한 끊임없는 시도를 통해 향의 일상화를 꿈꿉니다. 그랑핸드는 쉽게 소비되고 잊혀질 무언가가 아닌, 보이지 않는 곳에서 뚜렷한 존재감으로 모든 사람들에게 우리의 마음과 온기를 전하고 싶습니다.</p>
                 <div class="com_info">
-                    <div class="top">
-                        <a href="#">이용약관</a>
-                        <p>개인정보관리 책임자 정지호</p>
-                        <p>개인정보처리방침 호스팅 (주)아임웹</p>
-                    </div>
-                    <div class="bottom">
+                    <div class="wrap">
+                        <div class="top">
+                            <a href="#">이용약관</a>
+                            <p>개인정보관리 책임자 정지호</p>
+                            <p>개인정보처리방침 호스팅 (주)아임웹</p>
+                        </div>
                         <div class="bottom_left">
                             <p>대표 정준혁</p>
                             <p>상호 (유)그랑핸드</p>
@@ -555,10 +562,10 @@
                             <p>메일 hello@granhand.com</p>
                             <p>전화 02-333-6525</p>
                         </div>
-                        <div class="bottom_right">
-                            <p>Sometimes you win,<br>Sometimes you learn.</p>
-                            <p><img src="" alt="인스타그램 바로가기"></p>
-                        </div>
+                    </div>
+                    <div class="bottom_right">
+                        <p>Sometimes you win,<br>Sometimes you learn.</p>
+                        <p><img src="./images/icon_insta.png" alt="인스타그램 바로가기"></p>
                     </div>
                 </div>
             </div>
