--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         <header>
             <div class="head_wrap">
                 <nav>
+                    <!-- menu_responsive -->
+                    <div class="menu">
+                        <img src="./images/icon_menu.png" alt="메뉴">
+                    </div>
                     <ul class="gnb">
                         <li><a href="#">Granhand</a></li>
                         <li><a href="#">Shop</a></li>
