--- a/index.html
+++ b/index.html
@@ -508,11 +508,11 @@
             <section class="index">
                 <div class="index_wrap">
                     <ul class="index_filter">
-                        <li><a href="#">All</a></li>
-                        <li class="index_act"><a href="#">Signature</a></li>
-                        <li><a href="#">Perfume</a></li>
-                        <li><a href="#">Fragrances</a></li>
-                        <li><a href="#">Natural</a></li>
+                        <li><a href="#" class="all">All</a></li>
+                        <li class="index_act"><a href="#" class="sig">Signature</a></li>
+                        <li><a href="#" class="per">Perfume</a></li>
+                        <li><a href="#" class="frag">Fragrances</a></li>
+                        <li><a href="#" class="nat">Natural</a></li>
                     </ul>
                     <div class="index_contents swiper">
                         <div class="swiper-button-prev"></div>
