--- a/index.html
+++ b/index.html
@@ -388,10 +388,10 @@
                                         <img src="./images/journal/img_journal002.jpg" alt="">
                                     </a>
                                     <div class="journal_title">
-                                        <h2>The Languag</h2>
-                                        <h3>그랑핸드 문예공모전 작품집</h3>
-                                        <p>그랑핸드 제1회 문예공모전 수상작들을 책으로 엮었습니다. 이번 문예 공모전은 ‘The Language of Scents’, ‘향의 언어’라는 테마 아래, 향과 글이 어떻게 교차하며 상호작용하는지에 대한 그랑핸드만의 첫번째 시도였습니다.</p>
-                                        <a href="#">문예공모전 작품집 신청하기</a>
+                                        <h2>New Arrival: Body Wash</h2>
+                                        <h3>4년 만에 선보이는 바디워시</h3>
+                                        <p>풍성한 거품과 깊이 있는 향, 그리고 세정력과 보습력까지. 최적의 밸런스를 갖춘 바디워시로 샤워하는 순간부터 마무리까지 온몸을 감싸는 그랑핸드만의 향을 경험해보세요.</p>
+                                        <a href="#">수지 살몬. 바디워시 경험하기</a>
                                     </div>
                                 </div>
                                 <div class="swiper-slide slide3">
@@ -399,10 +399,10 @@
                                         <img src="./images/journal/img_journal003.jpg" alt="">
                                     </a>
                                     <div class="journal_title">
-                                        <h2>The of Scents</h2>
-                                        <h3>그랑핸드 문예공모전 작품집</h3>
-                                        <p>그랑핸드 제1회 문예공모전 수상작들을 책으로 엮었습니다. 이번 문예 공모전은 ‘The Language of Scents’, ‘향의 언어’라는 테마 아래, 향과 글이 어떻게 교차하며 상호작용하는지에 대한 그랑핸드만의 첫번째 시도였습니다.</p>
-                                        <a href="#">문예공모전 작품집 신청하기</a>
+                                        <h2>2nd Illustration Contest.</h2>
+                                        <h3>제 2회 그랑핸드 사생대회</h3>
+                                        <p>그랑핸드에서 제2회 사생대회를 엽니다. '향'이라는 주제 안에서 나만의 방식으로 자유롭게 표현해주세요. 향에 대한 추상적인 느낌, 내가 좋아하는 냄새의 순간도 좋아요. 여러분이 일상에서 느끼는 향기의 모습을 보여주세요.</p>
+                                        <a href="#">그랑핸드 사생대회 참여하기</a>
                                     </div>
                                 </div>
                             </div>
